<resources>
    <string name="app_name">Online Hocam</string>
    <string name="fork_tutor">Hoca olmak istiyorum</string>
    <string name="fork_student">Öğrenci olmak istiyorum</string>
    <string name="sign_up_username">Kullanıcı Adı</string>
    <string name="sign_up_password">Şifre</string>
    <string name="user_enter_username">Lütfen kullanıcı adınızı girin...</string>
    <string name="user_enter_password">Lütfen şifrenizi girin...</string>
    <string name="user_signup_title">Kaydol</string>
    <string name="user_login_title">Giriş</string>
    <string name="user_auto_sign_in">Otomatik giriş yap</string>
    <string name="user_username_in_use">Girdiğiniz kullanıcı adı kullanılıyor, lütfen yeni bir kullanıcı adı deneyin...</string>
    <string name="user_wrong_username">Kullanıcı adınızı yanlış girdiniz, lütfen kontrol ediniz...</string>
    <string name="user_wrong_password">Şifrenizi yanlış girdiniz, lütfen kontrol ediniz...</string>
    <string name="user_something_went_wrong">Bir hata oluştu, lütfen kaydolmayı tekrar deneyin...</string>
    <string name="user_password_not_suitable">Şifre uygun değil lütfen değiştirin...</string>
    <string name="sign_up_password_cant_contain_semicolon">Şifre noktalı virgül (;) işaretini içermemelidir. Şifrenizden ; işaretini silip tekrar deneyiniz...</string>
    <string name="sign_up_password_must_include_numbers">Şifreniz en az bir rakam içermelidir...</string>
    <string name="sign_up_password_must_include_letters">Şifreniz en az iki harf içermelidir...</string>
    <string name="sign_up_password_must_include_both_letter_cases">Şifreniz en az bir büyük ve bir küçük harf içermelidir...</string>
    <string name="sign_up_password_must_include_symbols">Şifreniz en az bir sembol içermeli, $, @, %, + gibi...</string>
    <string name="sign_up_password_must_include_unique_different_chars">Şifreniz en az 5 farklı karakter içermelidir (büyük ve küçük harfler ayrı ayrı değerlendirilir)...</string>
    <string name="sign_up_password_is_short">Şifreniz yeterince uzun değil, en az 11 karakter uzunluğunda olmalı...</string>
    <string name="sign_up_account_is_being_created">Hesabınız oluşturuluyor, lütfen bekleyiniz...</string>
    <string name="user_signup_already_have_an_account">hesabım zaten var</string>
    <string name="user_signup_i_forget_my_password">Şifremi unuttum!</string>
    <string name="question_requests_for_students_not_answered_yet_question_requests">Cevaplanmasını İstediğiniz Soru Teklifleriniz</string>
    <string name="question_requests_for_students_pending_for_answer_questions">Henüz Cevaplanmamış Sorularınız</string>
    <string name="question_requests_for_students_pending_approval_answers">Onayınızı Bekleyen Cevaplar</string>
    <string name="question_requests_for_students_approved_answers">Cevabını Kabul Ettiğiniz Sorularınız</string>
    <string name="question_requests_for_students_rejected_answers">Cevabını Reddettiğiniz Sorularınız</string>
    <string name="question_requests_for_students_questions_you_rejected">Geri Çevrilen Soru Talepleriniz</string>
    <string name="question_requests_not_answered_yet_question_requests">Cevaplamanız İstenilen Soru Teklifleri</string>
    <string name="question_requests_pending_for_answer_questions">Cevaplamanız İstenilen Henüz Cevaplamadığınız Sorular</string>
    <string name="question_requests_pending_approval_answers">Onay Bekleyen Cevaplarınız</string>
    <string name="question_requests_approved_answers">Cevabı Kabul Edilmiş Sorularınız</string>
    <string name="question_requests_rejected_answers">Cevabı Reddedilmiş Sorularınız</string>
    <string name="question_requests_questions_you_rejected">Geri Çevirdiğiniz Soru Talepleri</string>
    <string name="question_requests_replier">Yanıtlayan: </string>
    <string name="question_requests_questioner">Soruyu soran: </string>
    <string name="question_requests_class">Ders: </string>
    <string name="question_requests_lesson">Konu: </string>
    <string name="question_display_browse_question">Soruyu Görüntüle</string>
    <string name="question_display_watch_solution">Çözümü İzle</string>
    <string name="question_requests_reply_video_is_not_submited_yet">Henüz görüntülenecek bir yanıt videosu yüklenmedi...</string>
    <string name="earnings_earnings_and_payments">Gelirler ve Ödemeler</string>
    <string name="earnings_balance">Bakiyeniz</string>
    <string name="earnings_income_solutions">Çözümlerden Elde Edilen Gelirler</string>
    <string name="earnings_income_displays">Görüntülenen Cevaplarınızdan Elde Edilen Gelirler</string>
    <string name="earnings_total_earnings_so_far">Şimdiye Kadarki Gelirlerinizin Toplamı</string>
    <string name="earnings_total_payments_so_far">Şimdiye Kadar Aldığınız Toplam Ödemeler</string>
    <string name="earnings_abort">Geri</string>
    <string name="earnings_send_payment_request">Ödeme Talebini Gönder</string>
    <string name="earnings_payment_request_open">Ödeme Talebi</string>
    <string name="earnings_enter_the_requested_amount">Talep ettiğiniz miktarı giriniz, lütfen...</string>
    <string name="earnings_payment_request_send_succesful">Ödeme talebiniz başarıyla iletildi.</string>
    <string name="earnings_payment_request_send_failed">Ödeme talebiniz iletilemedi, lütfen birazdan tekrar deneyiniz.</string>
    <string name="earnings_payment_request_already_sent">Zaten halihazırda bir ödeme talebiniz bulunuyor. Lütfen mevcut talep gerçekleştirilinceye kadar bekleyiniz.</string>
    <string name="question_requests_publisher">Yayınevi:</string>
    <string name="question_requests_book_name">Kitap Adı:</string>
    <string name="question_requests_page_no">Sayfa No:</string>
    <string name="question_requests_appreciated_price">Önerilen Ücret:</string>
    <string name="question_requests_last_delivery_date">Son Cevap Teslim Tarihi:</string>
    <string name="question_due_date_for_acceptance">Son Teklif Yanıtlama Tarihi:</string>
    <string name="post_question_question_image">Soru Görüntüsü Yükleme</string>
    <string name="post_question_please_enter_appreciated_price">Lütfen önerdiğiniz ücreti giriniz...</string>
    <string name="post_question_please_enter_page_no">Lütfen sorunun sayfa numarasını giriniz...</string>
    <string name="post_question_please_enter_last_delivery_date">Lütfen son cevap teslim tarihini giriniz...</string>
    <string name="post_question_please_select_the_lesson">Konuyu seçiniz...</string>
    <string name="post_question_please_select_the_class">Dersi seçiniz...</string>
    <string name="post_question_please_select_the_publisher">Yayınevini seçiniz...</string>
    <string name="post_question_please_select_the_book_name">Kitap adını seçiniz...</string>
    <string name="post_question_requested_tutor">Çözüm Talep Edilen Hoca:</string>
    <string name="post_question_please_select_the_requested_tutor">Çözüm Talep Edilen Hocayı seçiniz...</string>
    <string name="post_question_question_info">Soru Talebi Bilgileri</string>
    <string name="post_question_post_question_request">Soru Talebini Gönder</string>
    <string name="photo_import_external_storage_not_found">Resim dosyasını yükleyebilmeniz için Sd kartınızın takılı olması gerekir.</string>
    <string name="permission_check_camera_permission_is_needed">Android kamera iznini vermeniz, fotograf çekebilmeniz için gerekli.</string>
    <string name="permission_check_read_external_storage_permission_is_needed">Android Harici Belleği Okuma izni, sd kartınızdan fotograf yükleyebilmeniz için gerekli.</string>
    <string name="student_home_post_question_request">Yeni Soru\nÇözüm Talebi\nGönder</string>
    <string name="post_question_warning_fill_class_name">Lütfen sorunun hangi dersten olduğunu seçiniz...</string>
    <string name="post_question_warning_fill_lesson_name">Lütfen sorunun hangi konudan olduğunu seçiniz...</string>
    <string name="post_question_warning_fill_publisher_name">Lütfen sorunu yer aldığı kitabın yayınevini seçiniz.\nYayınevi ismi listede yoksa diğer seçeneğini, bilmiyorsanız bilinmiyor seçeneğini kullanınız...</string>
    <string name="post_question_warning_fill_book_name">Lütfen sorunu yer aldığı kitabı seçiniz.\nKitabın ismi listede yoksa diğer seçeneğini, bilmiyorsanız bilinmiyor seçeneğini kullanınız...</string>
    <string name="post_question_warning_fill_page_no">Lütfen sorunun yer aldığı sayfayı yazınız. Bilmiyorsanız 0 yazmanızı rica ederiz.</string>
    <string name="post_question_warning_fill_tutor_name_to_request">Lütfen soruyu yanıtlamasını istediğiniz hocanın adını seçiniz.\nİstediğiniz hocanın ismi listede yoksa ana menüde Yeni Hoca Keşfetme Ekranı\'ndan favorilerinize eklemelisiniz.</string>
    <string name="post_question_warning_fill_appreciated_price">Lütfen sorunuzun çözümü için ücret teklifini giriniz...</string>
    <string name="post_question_warning_fill_due_date_of_acceptance">Lütfen teklifinize olumlu ya da olumsuz yanıt verilmesini istediğiniz son tarihi seçiniz...</string>
    <string name="post_question_warning_fill_last_date_of_delivery">Lütfen sorunuzun çözümünün gönderilmesini beklediğiniz son tarihi seçiniz...</string>
    <string name="post_question_response_succesful">Soru talebiniz başarıyla gönderildi.\nTalebinize verilen yanıtı ve çözümü görüntülemek için Soru Çözüm Talepleri Görüntüleme Ekranı\'nı kullanabilirsiniz.</string>
    <string name="post_question_response_failed">Soru çözüm talebiniz gönderilirken bir hata oluştu.\nİnternet bağlantınızda bir sorun yoksa; geçici sorun nedeniyle özür diler, yakın zamanda talebinizi göndermeyi tekrar denemenizi rica ederiz.</string>
    <string name="menu_main_manu">Ana Menü</string>
    <string name="post_question_warning_fill_question_image">Sorunun fotografını henüz yüklemediniz.\nBüyük soru işaretinin sağındaki kamera simgesine tıklayarak sorunun fotografını çekebilir\nya da\nkamera simgesinin altındaki \"dosyalar\" simgesine tıklayarak telefonunuzda veya sd kartınızda bulunan fotografı yükleyebilirsiniz.</string>
    <string name="constant_unknown">bilinmiyor</string>
    <string name="constant_set">dolu</string>
    <string name="post_question_warning_appreciated_price_below_min">Sorunu çözümü için önerdiğiniz ücret teklifi minimum fiyat teklifinin altında.</string>
    <string name="post_question_please_upload_question_photo">Lütfen sağ taraftaki kamera veya dosya simgelerine tıklayarak sorunuzun fotografını çekin ya da telefonunuzdan yükleyin.</string>
    <string name="post_question_please_enter_the_book_name_below">Lütfen kitap adını aşağıya giriniz:</string>
    <string name="post_question_please_enter_the_book_name">Lütfen kitap adını giriniz...</string>
    <string name="post_question_warning_last_date_of_delivery_is_not_after_due_date_of_acceptance">Seçtiğiniz \"Son Cevap Teslim Tarihi\", \"Son Teklif Yanıtlama Tarihi\"nden sonraki bir tarih olmalı.</string>
    <string name="constant_ok">TAMAM</string>
    <string name="constant_zoom">Zoom?</string>
    <string name="tutorial_how_to_zoom">Nasıl zoom yapılır?</string>
    <string name="tutor_discovery_my_favorite_tutors">Favori Hocalarım</string>
    <string name="tutor_discovery_discover_tutors">Hocaları Keşfet</string>
    <string name="tutor_discovery_tutor_name">Hoca Adı:</string>
    <string name="tutor_discovery_rating">Beğeni Puanı:</string>
    <string name="shopping_cart_show_more_solutions">Daha Fazla Soru Çözümü</string>
    <string name="popular_recommended_popular_title">Popüler Sorular</string>
    <string name="user_login_create_a_new_account">Yeni bir hesap oluştur</string>
    <string name="warning_proccess_is_being_executed">İşlem gerçekleştiriliyor</string>
    <string name="warning_please_wait">Lütfen bekleyin...</string>
    <string name="menu_log_out">Çıkış</string>
    <string name="menu_purchased_solutions">Satın Aldığım Soru Çözümleri</string>
    <string name="menu_user_profile">Kullanıcı Profilim</string>
    <string name="menu_balance">Bakiyem</string>
</resources>