<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutUserProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="5"
        android:gravity="center" >

        <TextView
            android:text="@string/menu_user_profile"
            style="@style/textStyleB"
            android:layout_weight="5"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutPurchasedSolutions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="5"
        android:gravity="center" >

        <TextView
            android:text="@string/menu_purchased_solutions"
            style="@style/textStyleB"
            android:layout_weight="5"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="5"
        android:gravity="center" >

        <TextView
            android:text="@string/menu_balance"
            style="@style/textStyleB"
            android:layout_weight="5"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="5"
        android:gravity="center" >

        <TextView
            android:text="@string/menu_log_out"
            style="@style/textStyleB"
            android:layout_weight="5"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


</LinearLayout>
