<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".SignUpLoginActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/guideline_mid_down"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="@id/guideline_up">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textViewUpperMessage"
                    style="@style/textStyleB"
                    android:textColor="@color/colorTheme5"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textViewTitle"
                    android:text="@string/user_signup_title"
                    style="@style/textStyleA"
                    android:textColor="@color/colorTheme1"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textStyleB"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/sign_up_username"/>

                    <EditText
                        android:id="@+id/editTextUserName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="20sp"
                        android:hint="@string/user_enter_username"
                        android:inputType="textPersonName" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textStyleB"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/sign_up_password"/>

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="20sp"
                        android:hint="@string/user_enter_password"
                        android:inputType="textPassword" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayoutCheckBoxAutoSignIn"
                    android:gravity="right"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:weightSum="3"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/buttonSignUpLogin"
                        android:text="@string/user_signup_title"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:paddingStart="14dp"
                        android:paddingEnd="14dp"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        style="@style/textStyleA.Title"
                        android:background="@drawable/button_shape_1_selector"
                        android:shadowColor="#2D3C6E"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="10"
                        />


                </LinearLayout>



            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textViewLowerMessage"
                    style="@style/textStyleB"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/linearLayoutSignUpProblems"
                android:gravity="right"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textViewAlreadyHaveAnAccount"
                    android:text="@string/user_signup_already_have_an_account"
                    style="@style/textStyleB"
                    android:textSize="18sp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/textViewIForgetMyPassword"
                    android:text="@string/user_signup_i_forget_my_password"
                    style="@style/textStyleB"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>



            <LinearLayout
                android:id="@+id/linearLayoutOtherOptionsOnLogin"
                android:visibility="gone"
                android:gravity="right"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewCreateANewAccount"
                    android:text="@string/user_login_create_a_new_account"
                    style="@style/textStyleB"
                    android:textSize="18sp"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/colorAccent"/>


            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>