<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".StudentPopularQuestionsDisplayActivity">



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80"/>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_menu_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96"/>






    <LinearLayout
        android:id="@+id/linearLayoutMainPanelForSolutions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline_menu_down"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="@id/guideline_up">


        <LinearLayout
            android:id="@+id/linearLayoutMainProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="4"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/textStyleA"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="@string/warning_proccess_is_being_executed"/>

            <ProgressBar
                android:id="@+id/progressBarMain"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/textStyleA"
                android:textSize="26sp"
                android:text="@string/warning_please_wait"/>


        </LinearLayout>





        <LinearLayout
            android:id="@+id/linearLayoutActivityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewActivityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textStyleA.Title"
                android:text="@string/popular_recommended_popular_title"
                android:gravity="center" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutSolutionElementsListPanel"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <ScrollView
                android:id="@+id/scrollViewForSolutions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <LinearLayout
                        android:id="@+id/linearLayoutSolutionElementsFeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="vertical">


                        <ProgressBar
                            android:id="@+id/progressBarSolutionElementLoading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/buttonShowMoreSolutionOnSale"
                            android:text="@string/shopping_cart_show_more_solutions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp"
                            style="@style/textStyleA.Title"
                            android:background="@drawable/button_shape_1_selector"
                            android:shadowColor="#2D3C6E"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="10"
                            />


                        <TextView
                            android:id="@+id/textViewShowMoreSolutionOnSaleMessage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            style="@style/textStyleA"
                            android:textColor="@color/colorTheme6"/>


                    </LinearLayout>



                </LinearLayout>



            </ScrollView>



        </LinearLayout>




    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>